unpackaged/main/default/objects/Pais__c/fields/CodigoPais__c.field-meta.xml
<CustomField>
    <fullName>CodigoPais__c</fullName>
    <label>Código</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MX</fullName>
            </value>
            <value>
                <fullName>LB</fullName>
            </value>
            <value>
                <fullName>LC</fullName>
            </value>
            <value>
                <fullName>LI</fullName>
            </value>
            <value>
                <fullName>LK</fullName>
            </value>
            <value>
                <fullName>LR</fullName>
            </value>
            <value>
                <fullName>LS</fullName>
            </value>
            <value>
                <fullName>LT</fullName>
            </value>
            <value>
                <fullName>LU</fullName>
            </value>
            <value>
                <fullName>LV</fullName>
            </value>
            <value>
                <fullName>LX</fullName>
            </value>
            <value>
                <fullName>LY</fullName>
            </value>
            <value>
                <fullName>MA</fullName>
            </value>
            <value>
                <fullName>MC</fullName>
            </value>
            <value>
                <fullName>MD</fullName>
            </value>
            <value>
                <fullName>ME</fullName>
            </value>
            <value>
                <fullName>MF</fullName>
            </value>
            <value>
                <fullName>MG</fullName>
            </value>
            <value>
                <fullName>MH</fullName>
            </value>
            <value>
                <fullName>MK</fullName>
            </value>
            <value>
                <fullName>ML</fullName>
            </value>
            <value>
                <fullName>MM</fullName>
            </value>
            <value>
                <fullName>MN</fullName>
            </value>
            <value>
                <fullName>MO</fullName>
            </value>
            <value>
                <fullName>MP</fullName>
            </value>
            <value>
                <fullName>MQ</fullName>
            </value>
            <value>
                <fullName>MR</fullName>
            </value>
            <value>
                <fullName>MS</fullName>
            </value>
            <value>
                <fullName>MT</fullName>
            </value>
            <value>
                <fullName>MU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>